--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.12.0",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.0",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.20.0",
-    "@tanstack/react-query": "^5.12.0",
-    "recharts": "^2.10.0",
-    "lucide-react": "^0.294.0",
-    "framer-motion": "^10.16.0",
-    "clsx": "^2.0.0",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
